# squash

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yaml
src/: lib.rs  slice.rs
src/header/: boxed.rs  mod.rs
src/wrapper/: mod.rs  str.rs
